--- a/style.css
+++ b/style.css
@@ -2,4 +2,59 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background: linear-gradient(to right, rgb(122, 122, 122), white 3%);
+}
+
+header {
+  text-align: center;
+}
+
+header img {
+  height: 50px;
+}
+
+header img, h1 {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+header a {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 8px;
+  background-color: rgba(185, 0, 0, 0.747);
+  background-image: linear-gradient(rgb(228, 145, 145), rgb(172, 24, 24));
+}
+
+header a:link {
+  color: rgb(255, 255, 255);
+}
+
+header a:visited {
+  color: rgb(0, 0, 0);
+} 
+
+#featured-property figure {
+  text-align: center;
+  font-size: 90%;
+}
+
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  margin: auto;
+}
+
+#details div {
+ float: left;
+ text-align: center;
+ font-size: small;
+ color: rgb(255, 255, 255);
+ background-color: rgb(201, 38, 38);
+ width: 25%;
+ margin-bottom: 20px;
 }
